removed stylesheed because embedded html mothafukaaaaaa. included useless .idea file because reasons

--- a/UI/index.html
+++ b/UI/index.html
@@ -100,9 +100,9 @@
     <div class="container">
         <svg id="robot" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 -10 960 570">
             <circle fill="#fff" cx="470" cy="275" r="260"/>
-            <circle cx="470" cy="275" r="260" stroke="#ff0000" stroke-width="25" fill="none"></circle>
-            <line x1="1" y1="372" x2="372" y2="1" stroke="#ff0000" stroke-width="25" cx="470" cy="254" r="25" transform="translate(273,98)"></line>
-            <line x1="1" y1="1" x2="372" y2="372" stroke="#ff0000" stroke-width="25" transform="translate(273,98)"></line>
+            <circle cx="470" cy="275" r="260" stroke="#ff0000" stroke-width="25" fill="none" fill-opacity="0.75"></circle>
+            <line x1="1" y1="372" x2="372" y2="1" stroke="#ff0000" stroke-width="25" cx="470" cy="254" r="25" fill-opacity="0.75" transform="translate(273,98)"></line>
+            <line x1="1" y1="1" x2="372" y2="372" stroke="#ff0000" stroke-width="25" transform="translate(273,98)" fill-opacity="0.75"></line>
                 <g class="bubble">
                     <g class="head top">
                         <g class="before">
