update to the presentation

--- a/UI/index.html
+++ b/UI/index.html
@@ -19,66 +19,82 @@
 		
 	<img class="accesa-logo" src="img/al.png"/>
 
-    <section class="slide">
-      <h1>Roast<span style="color: #1e1e1e">Me</span></h1>
-	 
-	    <div class="container roastme-logo">
-        <svg id="robot" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 -10 960 570">
-            <circle fill="#fff" cx="470" cy="275" r="260"/>
-            <circle cx="470" cy="275" r="260" stroke="rgba(255, 0, 0, 1)" stroke-width="25" fill="none"></circle>
-            <line x1="1" y1="372" x2="372" y2="1" stroke="rgba(255, 0, 0, .5)" stroke-width="25" cx="470" cy="254" r="25" transform="translate(280,98)"></line>
-            <line x1="1" y1="1" x2="372" y2="372" stroke="rgba(255, 0, 0, .5)" stroke-width="25" transform="translate(273,95)"></line>
-                <g class="bubble">
-                    <g class="head top">
-                        <g class="before">
-                            <g class="levitate">
-                                <path fill="#0099bb" d="M480.5,9.545C436.011,9.545,400,45.61,400,90.1V166h161V90.1C561,45.61,524.989,9.545,480.5,9.545z"/>
-                                <path fill="#00bae6" d="M480,10h9.04c-2.807-0.296-5.654-0.455-8.54-0.455C436.011,9.545,400,45.61,400,90.1V166h80V10z"/>
-                            </g>
-                        </g>
-                    </g>
-                    <g class="lean">
-                        <g class="levitate">
-                            <path class="arm" fill="none" stroke="#0099bb" stroke-width="5" stroke-linecap="square" stroke-linejoin="round" stroke-miterlimit="10" d="
+      <div class="container roastme-logo">
+          <svg id="robot" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 -10 960 570">
+              <circle fill="#fff" cx="470" cy="275" r="260"/>
+              <circle cx="470" cy="275" r="260" stroke="rgba(255, 0, 0, 1)" stroke-width="25" fill="none"></circle>
+              <line x1="1" y1="372" x2="372" y2="1" stroke="rgba(255, 0, 0, .5)" stroke-width="25" cx="470" cy="254" r="25" transform="translate(280,98)"></line>
+              <line x1="1" y1="1" x2="372" y2="372" stroke="rgba(255, 0, 0, .5)" stroke-width="25" transform="translate(273,95)"></line>
+              <g class="bubble">
+                  <g class="head top">
+                      <g class="before">
+                          <g class="levitate">
+                              <path fill="#0099bb" d="M480.5,9.545C436.011,9.545,400,45.61,400,90.1V166h161V90.1C561,45.61,524.989,9.545,480.5,9.545z"/>
+                              <path fill="#00bae6" d="M480,10h9.04c-2.807-0.296-5.654-0.455-8.54-0.455C436.011,9.545,400,45.61,400,90.1V166h80V10z"/>
+                          </g>
+                      </g>
+                  </g>
+                  <g class="lean">
+                      <g class="levitate">
+                          <path class="arm" fill="none" stroke="#0099bb" stroke-width="5" stroke-linecap="square" stroke-linejoin="round" stroke-miterlimit="10" d="
                       M434.833,320.333c0,0,0.143-8.807-0.911-32.76"/>
-                            <path class="arm delay-4" fill="none" stroke="#0099bb" stroke-width="5" stroke-linecap="square" stroke-linejoin="round" stroke-miterlimit="10" d="
+                          <path class="arm delay-4" fill="none" stroke="#0099bb" stroke-width="5" stroke-linecap="square" stroke-linejoin="round" stroke-miterlimit="10" d="
                       M527.28,287.573c-1.054,23.953-0.911,32.76-0.911,32.76"/>
-                            <circle fill="#00bae6" cx="515.25" cy="279" r="17.75"/>
-                            <circle fill="#00bae6" cx="447.25" cy="279" r="17.75"/>
-                            <rect x="447" y="241" fill="#0099bb" width="67" height="65"/>
-                            <g class="leg">
-                                <path fill="none" stroke="#0099bb" stroke-width="5" stroke-linecap="square" stroke-linejoin="round" stroke-miterlimit="10" d="
+                          <circle fill="#00bae6" cx="515.25" cy="279" r="17.75"/>
+                          <circle fill="#00bae6" cx="447.25" cy="279" r="17.75"/>
+                          <rect x="447" y="241" fill="#0099bb" width="67" height="65"/>
+                          <g class="leg">
+                              <path fill="none" stroke="#0099bb" stroke-width="5" stroke-linecap="square" stroke-linejoin="round" stroke-miterlimit="10" d="
                       M463.833,359.333c0,0,0.143-8.807-0.911-32.76"/>
-                                <path fill="#00bae6" d="M479.311,361.396c-8.956-6.462-21.476-4.682-28.235,4.143c-6.759,8.823-5.219,21.372,3.351,28.339
+                              <path fill="#00bae6" d="M479.311,361.396c-8.956-6.462-21.476-4.682-28.235,4.143c-6.759,8.823-5.219,21.372,3.351,28.339
                           L479.311,361.396z"/>
-                            </g>
-                            <g class="leg delay-6">
-                                <path fill="none" stroke="#0099bb" stroke-width="5" stroke-linecap="square" stroke-linejoin="round" stroke-miterlimit="10" d="
+                          </g>
+                          <g class="leg delay-6">
+                              <path fill="none" stroke="#0099bb" stroke-width="5" stroke-linecap="square" stroke-linejoin="round" stroke-miterlimit="10" d="
                       M499.28,326.573c-1.054,23.953-0.911,32.76-0.911,32.76"/>
-                                <path fill="#00bae6" d="M510.386,393.843c8.519-7.028,9.965-19.592,3.139-28.363c-6.827-8.773-19.359-10.458-28.266-3.93
+                              <path fill="#00bae6" d="M510.386,393.843c8.519-7.028,9.965-19.592,3.139-28.363c-6.827-8.773-19.359-10.458-28.266-3.93
                         L510.386,393.843z"/>
-                            </g>
-                            <circle fill="#0099bb" cx="480.5" cy="305.5" r="33.5"/>
-                        </g>
-                    </g>
-                    <g class="head">
-                        <g class="levitate">
-                            <g>
-                                <path fill="#00bae6" d="M370.065,176c-0.001,0-0.004-0.065-0.004,0.028c0,48.908,44.819,88.43,100.106,88.43
+                          </g>
+                          <circle fill="#0099bb" cx="480.5" cy="305.5" r="33.5"/>
+                      </g>
+                  </g>
+                  <g class="head">
+                      <g class="levitate">
+                          <g>
+                              <path fill="#00bae6" d="M370.065,176c-0.001,0-0.004-0.065-0.004,0.028c0,48.908,44.819,88.43,100.106,88.43
                         c55.286,0,100.105-39.46,100.105-88.368c0-0.093-0.004-0.09-0.004-0.09H370.065z" opacity="1" fill-opacity="1"></path><path fill="#00bae6" d="M370.065,176c-0.001,0-0.004-0.065-0.004,0.028c0,48.908,44.819,88.43,100.106,88.43
                         c55.286,0,100.105-39.46,100.105-88.368c0-0.093-0.004-0.09-0.004-0.09H370.065z" opacity="1" fill-opacity="1"></path><path fill="#00bae6" d="M370.065,176c-0.001,0-0.004-0.065-0.004,0.028c0,48.908,44.819,88.43,100.106,88.43
                         c55.286,0,100.105-39.46,100.105-88.368c0-0.093-0.004-0.09-0.004-0.09H370.065z" opacity="1" fill-opacity="1"></path> </g>
-                            <g class="eyes">
-                                <circle fill="#FFFFFF" stroke="#0099bb" stroke-width="5" stroke-miterlimit="10" cx="480.235" cy="141.86" r="14.015"/>
-                                <circle fill="#FFFFFF" stroke="#0099bb" stroke-width="5" stroke-miterlimit="10" cx="444.377" cy="141.86" r="14.015"/>
-                            </g>
-                        </g>
-                    </g>
-            </g>
-        </svg>
-    </div>
+                          <g class="eyes">
+                              <circle fill="#FFFFFF" stroke="#0099bb" stroke-width="5" stroke-miterlimit="10" cx="480.235" cy="141.86" r="14.015"/>
+                              <circle fill="#FFFFFF" stroke="#0099bb" stroke-width="5" stroke-miterlimit="10" cx="444.377" cy="141.86" r="14.015"/>
+                          </g>
+                      </g>
+                  </g>
+              </g>
+          </svg>
+      </div>
+
+    <section class="slide">
+      <h1>Roast<span style="color: #1e1e1e">Me</span></h1>
+
+        <div class="team">
+            <ul>
+                <li>Dan Lupusanschi</li>
+                <li>Cristian</li>
+                <li>Adrian Parasciuc</li>
+                <li>Alex Macra</li>
+                <li>Tudor</li>
+                <li>Radu</li>
+                <li>Bogdan Boiculese</li>
+            </ul>
+        </div>
     </section>
 
+      <section style="position: absolute; background: #010300;" class="slide">
+          <img src="img/face.jpg">
+      </section>
+      
       <section class="slide" style="background-color: #36254a">
 	   <style>
   
@@ -194,139 +210,22 @@
       </section>
 
       <section class="slide">
-          <h2>stuff</h2>
+          <h2>Technologies we used</h2>
     <ul>
-        <li>Semantics</li>
+        <li>this and that</li>
 
     </ul>
       </section>
 
-      
-      <section class="slide">
-          <pre><code class="html">
-&lt;!DOCTYPE html&gt;
-&lt;html lang="en"&gt;
-&lt;head&gt;
-    &lt;meta charset="UTF-8"&gt;
-    &lt;title&gt;sample&lt;/title&gt;
-&lt;/head&gt;
-&lt;body&gt;
 
-&lt;header&gt;
-    &lt;span&gt;Header Logo&lt;/span&gt;
-    &lt;nav&gt;
-        &lt;a href="" title=""&gt;home&lt;/a&gt;
-        &lt;a href="" title=""&gt;our team&lt;/a&gt;
-        &lt;a href="" title=""&gt;projects&lt;/a&gt;
-        &lt;a href="" title=""&gt;contact&lt;/a&gt;
-    &lt;/nav&gt;
-    &lt;form&gt;&lt;!-- search form here--&gt;&lt;/form&gt;
-&lt;/header&gt;
-&lt;main&gt;
-    &lt;article&gt;
-        &lt;h1&gt;Article Heading&lt;/h1&gt;
-        &lt;p&gt;lorem ipsum&lt;/p&gt;
-        &lt;h2&gt;subsection&lt;/h2&gt;
-        &lt;p&gt;lorem ipsum&lt;/p&gt;
-        &lt;section&gt;
-            &lt;h3&gt;another subsection&lt;/h3&gt;
-            &lt;p&gt;lorem ipsum&lt;/p&gt;
-        &lt;/section&gt;
-    &lt;/article&gt;
-    &lt;aside&gt;
-        &lt;!-- related content here--&gt;
-    &lt;/aside&gt;
-&lt;/main&gt;
-&lt;footer&gt;
-&lt;/footer&gt;
-&lt;/body&gt;
-&lt;/html&gt;
-          </code></pre>
+      <section class="slide">
+          <h2>Business value</h2>
 
       </section>
-
- 
       <section class="slide">
-          <h2>Ok, stuff</h2>
+          <h2>How to extend</h2>
 
-          <ul>
-              <li class="slide slide-next" >stuff</li>
-          </ul>
-          </section>
-
-	   <section class="slide" style="    color: #ff6;
-    background-color: #000;">
-         <div id="titles"><div id="titlecontent">
-
-	<li>Check if there are tables used for layouts or other purpose other than tabular data. Screen reader inteprets everything with this html tag as a table, and reads the number of rows, columns, and data inside it. </li>
-<li>Other than images, we need to describe better the links, in order for them to be easily spotted and better interpreted by screen readers.</li>
-<li>Each area of the site needs roles: header, navigation(<nav role=”navigation”>), main content footer, for easier screen reading.</li>
-<li>Screen readers have issues with content loaded dynamically. </li>
-<li>Tab index all areas for easier tab navigation. (not just inputs / buttons)</li>
-<li>make hyperlinks visible, or keep underline / create an alternative view for them. This is especially for color blind.</li>
-<li>Definition list (dd dt dl) used for list elements(need to check the dropdowns as I recall I used this tags) The definition list is used by the screen readers as a caption regarding list elements.</li>
-<li>Wrap checkboxes, radiobuttons in fieldsets, so the label and input be correctly intrepreted by screen readers</li>
-<li>Use legend attribute in form elements</li>
-<li>Use captions in tables</li>
-<li>For more descriptive alternative text, use ‘longdesc’ attribute</li>
-<li>Check scripting of elements (such as span as a link, div a a link)</li>
-<li>No inputs should do a specific action just by focusing on it, without at least warning the user before the event happens, and no dropdown should do specific actions just by selecting the item. </li>
-<li>On complicated formats (eg: mm/dd/yyyy input) or functions, we should give a clear example or hints.</li>
-<li>basically keep the html syntax as close as possible to it’s standard. This is the best thing we can do regarding accesibility.</li>
-<li>ARIA ARIA ARIA. Read about it, and use it's syntax on custom created elements</li>
-
-
-
-
-
-
-
-
-</div></div>
-<style>
-#titles
-{
-	position: absolute;
-	width: 18em;
-	height: 50em;
-	bottom: 0;
-	left: 50%;
-	margin-left: -9em;
-	font-size: 350%;
-	font-weight: bold;
-	text-align: justify;
-	overflow: hidden;
-	transform-origin: 50% 100%;
-	transform: perspective(300px) rotateX(12deg);
-}
-#titles li {list-style-type: none; margin: 150px 0 150px 0;}
-#titles:after
-{
-	position: absolute;
-	content: ' ';
-	left: 0;
-	right: 0;
-	top: 0;
-	bottom: 60%;
-	background-image: linear-gradient(top, rgba(0,0,0,1) 0%, transparent 100%);
-	pointer-events: none;
-}
-
-
-#titlecontent
-{
-	position: absolute;
-	top: 100%;
-	animation: scroll 100s linear 4s infinite;
-}
-
-@keyframes scroll {
-	0% { top: 100%; }
-	100% { top: -170%; }
-}
-</style>
       </section>
-	  
 
 	<section class="slide">
       <h1>Thank you, <span style="color: #1e1e1e"></br> Questions?</span></h1>
