--- a/UI/index.html
+++ b/UI/index.html
@@ -91,10 +91,6 @@
         </div>
     </section>
 
-      <section style="position: absolute; background: #010300;" class="slide">
-          <img src="img/face.jpg">
-      </section>
-      
       <section class="slide" style="background-color: #36254a">
 	   <style>
   
@@ -209,14 +205,23 @@
     </div>
       </section>
 
-      <section class="slide">
-          <h2>Technologies we used</h2>
-    <ul>
-        <li>this and that</li>
-
-    </ul>
+      <section style="position: absolute; background: #010300;" class="slide">
+          <img src="img/face.jpg">
       </section>
+      <section style="padding: 0;position: absolute; background: #010300;" class="slide etc">
+          <img style="object-fit: cover;margin: 0" src="img/2.jpg">
 
+          <style>.csstransforms .slide-container.slide-scale:not(.slide-menu) > .slide.etc > .slide-slide-scaler {
+              transform: none!important;
+          }</style>
+      </section>
+      <section style="padding: 0;position: absolute; background: #010300;" class="slide etc">
+          <img style="object-fit: cover;margin: 0" src="http://cdn1.alphr.com/sites/alphr/files/2017/08/home_office_seeks_facial_recognition_supplier_-_1.jpg">
+
+          <style>.csstransforms .slide-container.slide-scale:not(.slide-menu) > .slide.etc > .slide-slide-scaler {
+              transform: none!important;
+          }</style>
+      </section>
 
       <section class="slide">
           <h2>Business value</h2>
@@ -225,6 +230,14 @@
       <section class="slide">
           <h2>How to extend</h2>
 
+      </section>
+
+      <section class="slide">
+          <h2>Technologies we used</h2>
+          <ul>
+              <li>this and that</li>
+
+          </ul>
       </section>
 
 	<section class="slide">
