--- a/UI/index.html
+++ b/UI/index.html
@@ -229,14 +229,16 @@
       </section>
       <section class="slide">
           <h2>How to extend</h2>
-
+mobile app, doppleganger, face trait, viral
       </section>
 
       <section class="slide">
-          <h2>Technologies we used</h2>
-          <ul>
-              <li>this and that</li>
-
+          <h2>Technologies used</h2>
+          <ul style="list-style-type: none">
+              <li style="float: left; width: 100%;"><img style="float: left;max-width: 400px;margin-bottom:-50px;" src="img/azure-1.png"/></li>
+              <li style="float: left; width: 100%;"><img style="float: left;margin-left: 30%;margin-top:-50px;margin-bottom:-50px;max-width: 400px;"  src="img/Azure-SQL-Database.png"/></li>
+              <li style="float: left; width: 100%;"><img style="float:left;max-width: 400px;margin-top:-50px;margin-bottom:-50px;"  src="img/cdetorres_hero_01.png"/></li>
+              <li style="float: left; width: 100%;"> <img style="float: left;margin-left: 30%;margin-top:-50px;float: left;max-width: 400px;"  src="img/45-full.png"/></li>
           </ul>
       </section>
 
