DO NOT READ THE MORE
I TOLD YOU, WHY WOUD YOU DO THAT????

--- a/UI/index.html
+++ b/UI/index.html
@@ -81,11 +81,11 @@
         <div class="team">
             <ul>
                 <li>Dan Lupusanschi</li>
-                <li>Cristian</li>
+                <li>Cristian Betea</li>
                 <li>Adrian Parasciuc</li>
                 <li>Alex Macra</li>
-                <li>Tudor</li>
-                <li>Radu</li>
+                <li>Tudor Lung</li>
+                <li>Radu Vingan</li>
                 <li>Bogdan Boiculese</li>
             </ul>
         </div>
@@ -215,30 +215,39 @@
               transform: none!important;
           }</style>
       </section>
-      <section style="padding: 0;position: absolute; background: #010300;" class="slide etc">
-          <img style="object-fit: cover;margin: 0" src="http://cdn1.alphr.com/sites/alphr/files/2017/08/home_office_seeks_facial_recognition_supplier_-_1.jpg">
-
-          <style>.csstransforms .slide-container.slide-scale:not(.slide-menu) > .slide.etc > .slide-slide-scaler {
-              transform: none!important;
-          }</style>
-      </section>
-
+      
       <section class="slide">
           <h2>Business value</h2>
-
+<ul class="bigger"><li>Viral opportunity</li><li>Premium version</li><li>Data gathering</li></ul><img src="img/business-value-graphic.jpg" style="width: auto; max-height: 650px;top: 30%;position: absolute; right: 5%;max-width: 40%"/>
       </section>
       <section class="slide">
-          <h2>How to extend</h2>
-mobile app, doppleganger, face trait, viral
+          <h2>Possibilities for growth</h2>
+<ul class="bigger">
+    <li>Mobile app</li>
+    <li>Find your twin</li>
+    <li>Extended trait recognition</li>
+</ul><img src="img/GrowthHackingTips.jpg.limit.1000x650.jpg" style="width: auto; max-height: 650px;top: 30%;position: absolute; right: 5%;max-width: 40%"/>
+
+          <style>.bigger li {font-size: 40pt} .bigger {margin-top: 150px;}</style>
       </section>
 
       <section class="slide">
           <h2>Technologies used</h2>
-          <ul style="list-style-type: none">
+          <ul style="list-style-type: none; margin-top: 100px;">
               <li style="float: left; width: 100%;"><img style="float: left;max-width: 400px;margin-bottom:-50px;" src="img/azure-1.png"/></li>
-              <li style="float: left; width: 100%;"><img style="float: left;margin-left: 30%;margin-top:-50px;margin-bottom:-50px;max-width: 400px;"  src="img/Azure-SQL-Database.png"/></li>
-              <li style="float: left; width: 100%;"><img style="float:left;max-width: 400px;margin-top:-50px;margin-bottom:-50px;"  src="img/cdetorres_hero_01.png"/></li>
-              <li style="float: left; width: 100%;"> <img style="float: left;margin-left: 30%;margin-top:-50px;float: left;max-width: 400px;"  src="img/45-full.png"/></li>
+              <li style="float: left; width: 100%;"><img style="float: right;margin-left: 30%;margin-top:-50px;margin-bottom:-80px;max-width: 400px;"  src="img/Azure-SQL-Database.png"/></li>
+              <li style="float: left; width: 100%;"><img style="float:left;max-width: 400px;margin-top:-50px;margin-bottom:-50px;"  src="img/45-full.png"/></li>
+              <li style="float: left; width: 100%;"> <img style="float: right;margin-left: 30%;margin-top:-50px;max-width: 400px;"  src="img/cdetorres_hero_01.png"/></li>
+              <li style="float: left; width: 100%;"><img style="    float: left;
+    max-width: 400px;
+    margin-top: 0;
+    margin-bottom: 0;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    height: 360px;
+    margin-top: -180px;" src="img/main-qimg-57151fc16726016ed34757caf2998be5.png"/></li>
           </ul>
       </section>
 
