--- a/UI/index.html
+++ b/UI/index.html
@@ -218,7 +218,7 @@
       
       <section class="slide">
           <h2>Business value</h2>
-<ul class="bigger"><li>Viral opportunity</li><li>Premium version</li><li>Data gathering</li></ul><img src="img/business-value-graphic.jpg" style="width: auto; max-height: 650px;top: 30%;position: absolute; right: 5%;max-width: 40%"/>
+<ul class="bigger"><li>Viral opportunity</li><li>Data gathering</li><li>Premium version</li></ul><img src="img/business-value-graphic.jpg" style="width: auto; max-height: 650px;top: 30%;position: absolute; right: 5%;max-width: 40%"/>
       </section>
       <section class="slide">
           <h2>Possibilities for growth</h2>
@@ -226,9 +226,10 @@
     <li>Mobile app</li>
     <li>Find your twin</li>
     <li>Extended trait recognition</li>
+	<li>Caricature</li>
 </ul><img src="img/GrowthHackingTips.jpg.limit.1000x650.jpg" style="width: auto; max-height: 650px;top: 30%;position: absolute; right: 5%;max-width: 40%"/>
 
-          <style>.bigger li {font-size: 40pt} .bigger {margin-top: 150px;}</style>
+          <style>.bigger li {font-size: 44pt} .bigger {margin-top: 170px;}</style>
       </section>
 
       <section class="slide">
