--- a/UI/index.html
+++ b/UI/index.html
@@ -175,6 +175,12 @@
 
           <style>.bigger li {font-size: 30pt} .bigger {margin-top: 170px;}</style>
       </section>
+	  
+	  <section class="slide">
+	  <h2>Happy customers</h2>
+	  
+	  <img src="img/11.jpg" style="max-height: 550px;width: auto;"/>
+	  </section>
 
       <section class="slide">
           <h2>Technologies used</h2>
