--- a/UI/index.html
+++ b/UI/index.html
@@ -29,7 +29,7 @@
                 <li>Adrian Parasciuc</li>
                 <li>Alex Macra</li>
                 <li>Tudor Lung</li>
-                <li>Radu Vingan</li>
+                <li>Radu Gheorghiu</li>
                 <li>Bogdan Boiculese</li>
             </ul>
         </div>
@@ -171,16 +171,12 @@
     <li>Find your twin</li>
     <li>Extended trait recognition</li>
 	<li>Caricature</li>
+	<li>Roast ratings</li>
 </ul><img src="img/GrowthHackingTips.jpg.limit.1000x650.jpg" style="width: auto; max-height: 420px;top: 30%;position: absolute; right: 10%;max-width: 40%"/>
 
           <style>.bigger li {font-size: 30pt} .bigger {margin-top: 170px;}</style>
       </section>
 	  
-	  <section class="slide">
-	  <h2>Happy customers</h2>
-	  
-	  <img src="img/11.jpg" style="max-height: 550px;width: auto;"/>
-	  </section>
 
       <section class="slide">
           <h2>Technologies used</h2>
@@ -201,7 +197,11 @@
     margin-top: 180px;" src="img/main-qimg-57151fc16726016ed34757caf2998be5.png"/></li>
           </ul>
       </section>
-
+ <section class="slide">
+	  <h2>Happy customers</h2>
+	  
+	  <img src="img/11.jpg" style="max-height: 550px;width: auto;"/>
+	  </section>
 	<section class="slide">
       <h1>Thank you, <span style="color: #1e1e1e"></br> Questions?</span></h1>
   </section>
